test/typecheck/bad-assertreturn-type-mismatch.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func (param i32) (result i32) local.get 0)
  (export "foo" (func 0)))
(assert_return (invoke "foo" (i32.const 0)) (f32.const 0))
(;; STDERR ;;;
out/test/typecheck/bad-assertreturn-type-mismatch.txt:6:17: error: type mismatch for result 0 of action. got f32, expected i32
(assert_return (invoke "foo" (i32.const 0)) (f32.const 0))
                ^^^^^^
;;; STDERR ;;)
